--- a/.github/workflows/pr_render.yml
+++ b/.github/workflows/pr_render.yml
@@ -9,7 +9,8 @@ on:
 
 jobs:
   Scene-Render:
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
 
