--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -9,7 +9,8 @@ on:
 
 jobs:
   Scene-Render:
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
 
@@ -27,7 +28,8 @@ jobs:
 
   Final-Render:
     needs: Scene-Render
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
 
