--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -1,11 +1,11 @@
 name: Full Render
 
 on:
+  # allows for manual triggering from github
+  workflow_dispatch:
   push:
     branches: [ main ]
 
-  # allows for manual triggering from github
-  workflow_dispatch:
 
 jobs:
   Scene-Render:
@@ -17,6 +17,7 @@ jobs:
         run: |
           echo "Creating inital buffer frames"
           # make scene_render
+          make set_paths
           scripts/render.py --stage=scene
 
       - name: Upload Buffer Images as Artifacts
@@ -35,6 +36,7 @@ jobs:
         run: |
           echo "Creating composited avi"
           # make edit_render
+          make set_paths
           scripts/render.py --stage=edit
 
       - name: Upload Completed Movie
