--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,26 @@
-scene_buffer_frames: 1-90
-edit_buffer_frames: 1-90
 
-scene_render_force_update: false
-edit_render_force_update: false
+scene:
+  buffer_frames: 1-9
+  force_update: false
+  render_output: 'imgs/buffer/'
+  engine: CYCLES # todo: figure out how to do EEVEE
+  blend_file: scene.blend
+  render_format: PNG
+  docker_flags: ''
+
+edit:
+  buffer_frames: 1-9
+  force_update: false
+  render_output: 'imgs/out/'
+  engine: CYCLES # todo: figure out how to do EEVEE
+  blend_file: edit.blend
+  render_format: AVIRAW
+  docker_flags: '-a'
+
+file_output_format: '{bfile}_{stage}_####'
+docker:
+  cmd: docker run --rm -v {cwd}/blender/:/blender/ -v {cwd}/imgs:/imgs ikester/blender blender/{blend_file} -o {output_location} -E {engine} -F {format} -t 8 {flags}
+  default:
+    engine: CYCLES
+    format: PNG
+    output_location: imgs/buffer/
