swapping out an avi file; fixing edit render for ghactions; updated paths for output files

--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -5,6 +5,10 @@ on:
   workflow_dispatch:
   push:
     branches: [ main ]
+    paths:
+      - 'blender/**'
+      - 'scripts/**'
+      - 'imgs/**'
 
 
 jobs:
