--- a/.github/workflows/pr_render.yml
+++ b/.github/workflows/pr_render.yml
@@ -20,9 +20,8 @@ jobs:
       - name: Create Raw Render from Scene
         run: |
           echo "Creating inital buffer frames"
-          # make scene_render
           make set_paths
-          scripts/render.py --stage=scene
+          make scene_render
 
       - name: Upload Buffer Images as Artifacts
         uses: actions/upload-artifact@v1
