--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -23,9 +23,8 @@ jobs:
       - name: Create Raw Render from Scene
         run: |
           echo "Creating inital buffer frames"
-          # make scene_render
           make set_paths
-          scripts/render.py --stage=scene
+          make scene_render
 
       - name: Upload Buffer Images as Artifacts
         uses: actions/upload-artifact@v1
@@ -46,7 +45,7 @@ jobs:
         run: |
           echo "Creating composited avi"
           make set_paths
-          scripts/render.py --stage=edit
+          make edit_render
 
       - name: Upload Completed Movie
         uses: actions/upload-artifact@v1
