--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ scene:
   engine: CYCLES # todo: figure out how to do EEVEE
   blend_file: scene.blend
   render_format: PNG
-  docker_flags: ''
+  blender_flags: ''
 
 edit:
   buffer_frames: 1-90
@@ -15,7 +15,7 @@ edit:
   engine: CYCLES
   blend_file: edit.blend
   render_format: AVIRAW
-  docker_flags: '-a' # include this to render as a video
+  blender_flags: '-a' # include this to render as a video
 
 cool_scene:
   buffer_frames: 1-90
@@ -24,13 +24,14 @@ cool_scene:
   engine: CYCLES # todo: figure out how to do EEVEE
   blend_file: cool_scene.blend
   render_format: PNG
-  docker_flags: ''
+  blender_flags: ''
 
 file_output_format: '{bfile}_{stage}_####'
 docker:
+  image: tennisgazelle/blender-pipeline:latest
   #render_cmd: docker run --rm -v {cwd}/blender/:/blender/ -v {cwd}/imgs:/imgs ikester/blender blender/{blend_file} -o {output_location} -E {engine} -F {format} -t 8 {flags}
-  render_cmd: docker run --rm -v {cwd}/blender/:/blender/ -v {cwd}/imgs:/imgs blender-pipeline:latest blender/{blend_file} -o {output_location} -E {engine} -F {format} -t 8 {flags}
-  python_cmd: docker run --rm -v ${cwd}/blender/:/blender/ -v ${cwd}/scripts:/scripts -v ${cwd}/config.yaml:/config.yaml blender-pipeline:latest blender/scene.blend --python scripts/get_path.py
+  render_cmd: docker run --rm -v {cwd}/blender/:/blender/ -v {cwd}/imgs:/imgs tennisgazelle/blender-pipeline:latest blender/{blend_file} -E {engine} -F {format} -t 8 {flags}
+  python_cmd: docker run --rm -v ${cwd}/blender/:/blender/ -v ${cwd}/scripts:/scripts -v ${cwd}/config.yaml:/config.yaml tennisgazelle/blender-pipeline:latest blender/scene.blend --python scripts/get_path.py
   var_defaults:
     engine: CYCLES
     format: PNG
