--- a/.github/workflows/pr_render.yml
+++ b/.github/workflows/pr_render.yml
@@ -14,6 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASS }}
+
       - name: Set the new relative paths
         run: make set_paths
 
