typo in command

--- a/.github/workflows/pr_render.yml
+++ b/.github/workflows/pr_render.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Create Raw (cool) Render from Scene
         run: |
           echo "Creating inital buffer frames"
-          make cool_render
+          make cool_scene_render
 
       - name: Upload Buffer Images as Artifacts
         uses: actions/upload-artifact@v1
