--- a/config.yaml
+++ b/config.yaml
@@ -8,26 +8,36 @@ scene:
   render_format: PNG
   blender_flags: ''
 
-edit:
-  buffer_frames: 1-90
-  force_update: false
-  render_output: 'imgs/out/'
-  engine: CYCLES
-  blend_file: edit.blend
-  render_format: AVIRAW
-  blender_flags: '-a' # include this to render as a video
+# edit:
+#   buffer_frames: 1-90
+#   force_update: false
+#   render_output: 'imgs/out/'
+#   engine: CYCLES
+#   blend_file: edit.blend
+#   render_format: AVIRAW
+#   blender_flags: '-a' # include this to render as a video
 
-cool_scene:
-  buffer_frames: 1-90
-  force_update: false
-  render_output: 'imgs/buffer/'
-  engine: CYCLES # todo: figure out how to do EEVEE
-  blend_file: cool_scene.blend
-  render_format: PNG
-  blender_flags: ''
+# cool_scene:
+#   buffer_frames: 1-90
+#   force_update: false
+#   render_output: 'imgs/buffer/'
+#   engine: CYCLES # todo: figure out how to do EEVEE
+#   blend_file: cool_scene.blend
+#   render_format: PNG
+#   blender_flags: ''
+
+stages:
+  scene:
+    buffer_frames: 1, 2, 3-9, 11, 44
+    force_update: false
+    render_output: 'imgs/buffer/'
+    engine: CYCLES # todo: figure out how to do EEVEE
+    blend_file: scene.blend
+    render_format: PNG
+    blender_flags: ''
 
 models:
-  - cool_cube:
+  cool_cube:
     obj_file: 'blender/models/curve-skeleton-cube.obj'
     render_output: 'imgs/out/models/'
     scaling_factor: 1 # default (1)
