--- a/config.yaml
+++ b/config.yaml
@@ -1,31 +1,3 @@
-
-scene:
-  buffer_frames: 1
-  force_update: false
-  render_output: 'imgs/buffer/'
-  engine: CYCLES # todo: figure out how to do EEVEE
-  blend_file: scene.blend
-  render_format: PNG
-  blender_flags: ''
-
-# edit:
-#   buffer_frames: 1-90
-#   force_update: false
-#   render_output: 'imgs/out/'
-#   engine: CYCLES
-#   blend_file: edit.blend
-#   render_format: AVIRAW
-#   blender_flags: '-a' # include this to render as a video
-
-# cool_scene:
-#   buffer_frames: 1-90
-#   force_update: false
-#   render_output: 'imgs/buffer/'
-#   engine: CYCLES # todo: figure out how to do EEVEE
-#   blend_file: cool_scene.blend
-#   render_format: PNG
-#   blender_flags: ''
-
 stages:
   scene:
     buffer_frames: 1, 2, 3-9, 11, 44
@@ -35,6 +7,15 @@ stages:
     blend_file: scene.blend
     render_format: PNG
     blender_flags: ''
+
+  edit:
+    buffer_frames: 1-90
+    force_update: false
+    render_output: 'imgs/out/'
+    engine: CYCLES
+    blend_file: edit.blend
+    render_format: AVIRAW
+    blender_flags: '-a' # include this to render as a video
 
 models:
   cool_cube:
