download artifacts try again

--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -57,6 +57,8 @@ jobs:
           path: scripts/requirements.txt
           
       - uses: actions/download-artifact@v2
+        with:
+          path: imgs/buffer/
 
       - name: Display structure of downloaded files
         run: ls -R
