copying downloads to correct path

--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -60,8 +60,8 @@ jobs:
         with:
           path: imgs/buffer/
 
-      - name: Display structure of downloaded files
-        run: ls -R
+      - name: Copy Downloads to correct path
+        run: cp ./scene-buffer-files/* ./imgs/buffer/
 
       - name: Create Composite Render
         run: |
