local-mac-commit

--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -23,8 +23,12 @@ RUN curl -L ${BLENDER_URL} | tar -xJ -C /usr/local/ \
 
 # run the pip install for the bundled python
 RUN curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py \
+    && ls /usr/local/blender/${BLENDER_MAJOR}/python/lib \
     && /usr/local/blender/${BLENDER_MAJOR}/python/bin/python3.7m get-pip.py \
-    && /usr/local/blender/${BLENDER_MAJOR}/python/bin/python3.7m -m pip install pyyaml
+    && /usr/local/blender/${BLENDER_MAJOR}/python/bin/python3.7m -m pip install pyyaml yamale --user
+
+# Get the config common library near the blender executable
+COPY common.py /usr/local/blender/${BLENDER_MAJOR}/scripts/startup/
 
 VOLUME /media
 WORKDIR /
