--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -12,6 +12,41 @@ on:
 
 
 jobs:
+  Model-Render:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASS }}
+
+      - name: Python Dependency Installation
+        uses: py-actions/py-dependency-install@v2.1.0
+        with:
+          path: scripts/requirements.txt
+
+      - name: Set the new relative paths
+        run: make set_paths
+
+      - name: Create Model Render from Turnstile
+        run: |
+          echo "Creating Turnstile Animation"
+          make model_render
+
+      # - name: Create Raw (cool) Render from Scene
+      #   run: |
+      #     echo "Creating inital buffer frames"
+      #     make cool_scene_render
+
+      - name: Upload Model Images as Artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: models
+          path: imgs/out/models/
+
   Scene-Render:
     runs-on: ubuntu-latest
     steps:
@@ -40,7 +75,7 @@ jobs:
           path: imgs/buffer/
 
   Final-Render:
-    needs: Scene-Render
+    needs: [Scene-Render, Model-Render]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
