adding all tags

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,7 +24,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASS }}
 
       - name: Build Docker image
-        run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} scripts/
+        run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} -t $REPO:${GITHUB_REF#refs/tags/} scripts/
 
       - name: Publish Docker image
         run: docker push $REPO --all-tags
