--- a/config.yaml
+++ b/config.yaml
@@ -18,24 +18,21 @@ stages:
     blender_flags: '-a' # include this to render as a video
 
 models:
-  # engine: CYCLES # todo, add this into the schema
-  # color_mode: 'RGBA',
-  # color_depth: 8,
-  # depth_scale: 1.4,
-  # file_format: 'PNG',
-  # resolution: 600,
+  _settings:
+    engine: CYCLES # todo, add this into the schema
+    color_mode: 'RGBA'
+    color_depth: 8
+    depth_scale: 1.4
+    file_format: 'PNG'
+    resolution: 600
   cool_cube:
     obj_file: 'blender/models/curve-skeleton-cube.obj'
     render_output: 'imgs/out/models/'
     scaling_factor: 1 # default (1)
     remove_doubles: true # default (false)
     edge_split: false # default (false)
-    # edge_split_angle: # todo alter schema, add this as double
-    depth_scale: 1.4 # default (1.4) # todo, make this as optional and overrides global
-    color_depth: 8 # default (8)
-    format: PNG # default PNG # todo, make this an optional override
+    edge_split_angle: 1.32645 # todo alter schema, add this as double
     video: false # default (false); if true, format is ____ and rotation_iteration will be 5 sec rotation at 30 fps (150)
-    resolution: 600 # is square; default (600)
     rotation_iterations: 30 # default 6
     include:
       - color # default only one active
