--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@ stages:
     buffer_frames: 1-90
     force_update: false
     render_output: 'imgs/buffer/'
-    engine: CYCLES # todo: figure out how to do EEVEE
+    engine: EEVEE # todo: figure out how to do EEVEE
     blend_file: scene.blend
     render_format: PNG
     blender_flags: ''
@@ -47,9 +47,9 @@ model_output_format: '{model}_{angle}_{map}'
 
 # experimental below, do not alter
 docker:
-  image: tennisgazelle/blender-pipeline:latest
+  image: tennisgazelle/blender-pipeline-gpu:latest
   #render_cmd: docker run --rm -v {cwd}/blender/:/blender/ -v {cwd}/imgs:/imgs ikester/blender blender/{blend_file} -o {output_location} -E {engine} -F {format} -t 8 {flags}
-  render_cmd: docker run --rm -v {cwd}/blender/:/blender/ -v {cwd}/imgs:/imgs tennisgazelle/blender-pipeline:latest blender/{blend_file} -E {engine} -F {format} -t 8 {flags}
+  render_cmd: docker run --rm -v {cwd}/blender/:/blender/ -v {cwd}/imgs:/imgs tennisgazelle/blender-pipeline-gpu:latest blender/{blend_file} -E {engine} -F {format} -t 8 {flags}
   # python_cmd: docker run --rm -v ${cwd}/blender/:/blender/ -v ${cwd}/scripts:/scripts -v ${cwd}/config.yaml:/config.yaml tennisgazelle/blender-pipeline:latest blender/scene.blend --python scripts/get_path.py
   var_defaults:
     engine: CYCLES
