--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,13 @@
 stages:
+  cool_scene:
+    buffer_frames: 1-90
+    force_update: false
+    render_output: 'imgs/buffer/'
+    engine: CYCLES # todo: figure out how to do EEVEE
+    blend_file: cool_scene.blend
+    render_format: PNG
+    blender_flags: ''
+
   scene:
     buffer_frames: 1-90
     force_update: false
@@ -48,11 +57,6 @@ model_output_format: '{model}_{angle}_{map}'
 # experimental below, do not alter
 docker:
   image: tennisgazelle/blender-pipeline:latest
-  #render_cmd: docker run --rm -v {cwd}/blender/:/blender/ -v {cwd}/imgs:/imgs ikester/blender blender/{blend_file} -o {output_location} -E {engine} -F {format} -t 8 {flags}
-  render_cmd: docker run --rm -v {cwd}/blender/:/blender/ -v {cwd}/imgs:/imgs tennisgazelle/blender-pipeline:latest blender/{blend_file} -E {engine} -F {format} -t 8 {flags}
+  render_cmd: docker run --rm -v {cwd}/blender/:/blender/ -v {cwd}/imgs:/imgs {image} blender/{blend_file} -E {engine} -F {format} -t 8 {flags}
   # python_cmd: docker run --rm -v ${cwd}/blender/:/blender/ -v ${cwd}/scripts:/scripts -v ${cwd}/config.yaml:/config.yaml tennisgazelle/blender-pipeline:latest blender/scene.blend --python scripts/get_path.py
-  var_defaults:
-    engine: CYCLES
-    format: PNG
-    output_location: imgs/buffer/
 
