--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ stages:
     file_output_format: '{bfile}_####'
 
   cool_scene:
-    buffer_frames: 1-90
+    buffer_frames: 1
     force_update: false
     render_output: 'imgs/buffer/'
     engine: CYCLES # todo: figure out how to do EEVEE
@@ -13,10 +13,10 @@ stages:
     blender_flags: ''
 
   scene:
-    buffer_frames: 1-90
+    buffer_frames: 1
     force_update: false
     render_output: 'imgs/buffer/'
-    engine: EEVEE # todo: figure out how to do EEVEE
+    engine: CYCLES # todo: figure out how to do EEVEE
     blend_file: scene.blend
     render_format: PNG
     blender_flags: ''
@@ -62,6 +62,10 @@ model_output_format: '{model}_{angle}_{map}'
 # experimental below, do not alter
 docker:
   image: tennisgazelle/blender-pipeline-gpu:latest
-  render_cmd: docker run --rm -v {cwd}/blender/:/blender/ -v {cwd}/imgs:/imgs {image} blender/{blend_file} -E {engine} -F {format} -t 8 {flags}
-  # python_cmd: docker run --rm -v ${cwd}/blender/:/blender/ -v ${cwd}/scripts:/scripts -v ${cwd}/config.yaml:/config.yaml tennisgazelle/blender-pipeline:latest blender/scene.blend --python scripts/get_path.py
+  # image: vogete/blender-cuda
+  # render_cmd: docker run --runtime=nvidia -e NVIDIA_VISIBLE_DEVICES=all --rm -v {cwd}/blender/:/blender/ -v {cwd}/imgs:/imgs {image} blender/{blend_file} -E {engine} -F {format} -t 8 -P scripts/force_gpu.py {flags}
+  render_cmd: docker run --runtime=nvidia -e NVIDIA_VISIBLE_DEVICES=all --rm -v {cwd}/blender/:/blender/ -v {cwd}/imgs:/imgs {image} blender/{blend_file} -E {engine} -F {format} -t 8 {flags} -P scripts/enable_gpu.py
+  # render_cmd: docker run --runtime=nvidia -e NVIDIA_VISIBLE_DEVICES=all --rm -v /scripts:/media -v {cwd}/blender/:/blender/ vogete/blender-cuda blender/cool_scene.blend -E CYCLES -t 0 -P scripts/force_gpu.py -o frame_### -f 1
 
+  # python_cmd: docker run --rm -v ${cwd}/blender/:/blender/ -v ${cwd}/scripts:/scripts -v ${cwd}/config.yaml:/config.yaml tennisgazelle/blender-pipeline:latest blender/scene.blend --python scripts/get_path.py
+  use_gpu: True
